--- a/app/src/main/res/layout/fragment_eight_deck.xml
+++ b/app/src/main/res/layout/fragment_eight_deck.xml
@@ -12,16 +12,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_count"
+            android:text="Count: 0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="@color/table_header_text"
+            android:backgroundTint="@color/app_background"
+            android:textSize="@dimen/text_size"
+            />
 
         <TableLayout
             android:id="@+id/table_layout_eight_deck"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/button_count"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_margin="20dp"
+            android:layout_marginBottom="40dp"
             android:gravity="center"
             >
 
